[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level/box-ring-arena-sports-fighting-cartoon-illustration/3926.jpg" type="Texture" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Main_Screen/swishes_sound/swish-1.wav" type="AudioStream" id=5]
[ext_resource path="res://Level/Bell_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Gamemodes/arcades/Background/PNG/City2/Bright/City2.png" type="Texture" id=7]
[ext_resource path="res://Level/background-of-boxing-ring-illuminated-sports-area-for-fighting-dangerous-sport/1023.jpg" type="Texture" id=8]
[ext_resource path="res://Gamemodes/arcades/Background/PNG/City3/Bright/City3.png" type="Texture" id=9]
[ext_resource path="res://Gamemodes/arcades/Background/PNG/City4/Bright/City4.png" type="Texture" id=10]
[ext_resource path="res://Gamemodes/arcades/Background/PNG/City1/Bright/City1.png" type="Texture" id=11]
[ext_resource path="res://Gamemodes/arcades/burst_background_large_screen_red.png" type="Texture" id=12]

[node name="Level" type="Node2D"]
modulate = Color( 0.894118, 0.878431, 0.878431, 1 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1425.0
margin_top = -689.0
margin_right = 2408.0
margin_bottom = 1637.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]

[node name="BG_level5" type="TextureRect" parent="Background"]
visible = false
modulate = Color( 0.894118, 0.772549, 0.772549, 1 )
margin_left = -245.0
margin_top = -10.0
margin_right = 1080.0
margin_bottom = 622.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_level2" type="TextureRect" parent="Background"]
visible = false
margin_left = -249.0
margin_top = -394.0
margin_right = 1173.0
margin_bottom = 592.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_level3" type="TextureRect" parent="Background"]
visible = false
margin_left = -249.0
margin_top = -750.0
margin_right = 1499.0
margin_bottom = 588.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_level4" type="TextureRect" parent="Background"]
visible = false
margin_left = -239.0
margin_top = -289.0
margin_right = 1167.0
margin_bottom = 588.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_level1" type="TextureRect" parent="Background"]
visible = false
margin_left = -242.0
margin_top = -46.0
margin_right = 1149.0
margin_bottom = 585.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_level6" type="TextureRect" parent="Background"]
visible = false
margin_left = -326.0
margin_top = -80.0
margin_right = 1180.0
margin_bottom = 578.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Character" parent="." instance=ExtResource( 3 )]
position = Vector2( -12.3389, -18.6406 )

[node name="UI" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.572285, 2.39654 )

[node name="Music_manager" type="Node2D" parent="."]

[node name="ui_come_in_place" type="AudioStreamPlayer2D" parent="Music_manager"]
stream = ExtResource( 5 )
volume_db = 15.656

[node name="Bell_Sound" type="AudioStreamPlayer2D" parent="Music_manager"]
stream = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -250, 0 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1080, 0 )

[connection signal="double_check" from="UI" to="." method="_on_UI_double_check"]
